# euchre

./: LICENSE  README.md  main.py  pyproject.toml
docs/: slides.md  talk_demo.md
euchre/: cards.py  cli.py  client.py  game.py
euchre/ui/: card_images.py  input.py  renderer.py  text.py
tests/: test_game.py
